Bug 319373 - Zoom slider and "free space" information should not have a fixed width
Summary: Zoom slider and "free space" information should not have a fixed width
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: status (other bugs)
Version First Reported In: 2.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: investigated
: 319318 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-05-05 18:03 UTC by Frank Reininghaus
Modified: 2013-06-18 15:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Reininghaus 2013-05-05 18:03:37 UTC
Since Dolphin 2.1/KDE 4.9, the zoom slider and the "free space" bar in the status bar have a fixed width. This was introduced in

http://quickgit.kde.org/?p=kde-baseapps.git&a=commit&h=213450d39704fc0154da5f0e45e4198af8239842

The downside of this approach is that the status bar has a rather large minimum width if both these elements are enabled. This can lead to unwanted effects, like a resizing of the Places Panel, if the view is split. (This was originally reported in bug 315573).

Another unwanted side effect of the fixed widths is that the "free space" bar might be too narrow to show the translated free space (see bug 318395).

Reproducible: Always
Comment 1 Janet 2013-05-12 12:25:30 UTC
Probably also a problem of the fixed size of the status bar elements: Bug 319318 - dolphin window size doesn't get restored after dragging it to screen edge and back when window is split.

Due to the fixed size of the elements the window cannot get small enough to fit into a quarter of the screen (1920x1200 here) and therefore probably cannot be restored to original size because the not correctly reduced size wrongly is assumed as new size.
Comment 2 Tanja Schulte 2013-05-12 13:52:41 UTC
Thanks for opening this new report. The fixed size of the status bar elements only causes problems...
E.g. it isn't possible anymore to have a one column file panel in icon mode which I sometimes prefer temporarily. The smallest file panel size is a two column size - and even then the left sidebar gets terribly shrunk in width and when I redrag the window to old wide size the sidebar stays that narrow. You have to rearrange a lot when you dare to resize dolphin's window now, that really hinders the workflow :(.

On a smaller display (1280 width) and big sidebar icons it can even happen that the sidebar gets shrunk to icons only, text invisible. 

And in other languages it might lead to the problem that the text in the free space information isn't readable because it is longer than the fixed size of the element I guess.

It really IMHO is unnecessary that the status bar elements keep a fixed size, especially the slider. I see that the free space information might need a *minimum* size so that the number always stays visible ("GiB" and "free" can vanish) - but that would require only a much smaller width which wouldn't cause those problems.
Comment 3 Frank Reininghaus 2013-06-12 07:27:01 UTC
Just for the record, I looked into all these size policy issues now. I think that we should replace the fixed width of 150 pixels by a maximum of 150 pixels. The "free space bar" still keeps a larger minimum than the other widgets though, which is determined by the class KCapacityBar in kdelibs (it ensures that the contents are still readable, at least I can still see the number and "GiB" here).

The patch (which finally looks rather simple, maybe reading all this "size policy" stuff in the Qt documentation was unnecessary after all) is here:

https://git.reviewboard.kde.org/r/110966/

(In reply to comment #2)
> And in other languages it might lead to the problem that the text in the
> free space information isn't readable because it is longer than the fixed
> size of the element I guess.

You're right: bug 318395. I first thought that we could fix both issues together, but now I'm not sure if some adjustments in KCapacityBar are needed to make sure that it calculates a reliable measure of how much space is needed for the translated text.
Comment 4 Frank Reininghaus 2013-06-18 15:49:25 UTC
Git commit 3e1720536b356e89cf443256373d4f830073e9d8 by Frank Reininghaus.
Committed on 18/06/2013 at 17:46.
Pushed by freininghaus into branch 'master'.

Do not use fixed widths for the widgets in the status bar

This fixes the problem that the Dolphin window has a rather large
minimum size. A side effect of this was that splitting the view could
resize the window (because twice the minimum status bar width was
needed then).
REVIEW: 110966
FIXED-IN: 4.10.5

M  +10   -13   dolphin/src/statusbar/dolphinstatusbar.cpp
M  +0    -2    dolphin/src/statusbar/dolphinstatusbar.h

http://commits.kde.org/kde-baseapps/3e1720536b356e89cf443256373d4f830073e9d8
Comment 5 Frank Reininghaus 2013-06-18 15:50:16 UTC
Sorry, wrong version.
Comment 6 Frank Reininghaus 2013-06-18 15:59:07 UTC
*** Bug 319318 has been marked as a duplicate of this bug. ***